css fixes, spacing and margin in varioius spots, add accent line

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -58,6 +58,10 @@ section#app-hero {
         @media (max-width: 768px) {
             margin-bottom: 20px !important;
             margin-top: 0 !important;
+
+            a.btn {
+                width: 100%;
+            }
         }
     }
 
@@ -531,6 +535,7 @@ header nav ul li a:hover {
 /* ======================================
  *  05. Solution
 /* ====================================== */
+
 .solution-item h3 {
     font-size: 32px;
     font-weight: 500;
@@ -553,6 +558,16 @@ header nav ul li a:hover {
             rgba(8, 8, 12, 0) 100%
     );
     backdrop-filter: blur(8px);
+
+    @media (max-width: 768px) {
+        p, h3 {
+            text-align: center;
+        }
+
+        .btn {
+            width: 100%;
+        }
+    }
 }
 
 .solution-single {
@@ -863,6 +878,21 @@ h2.accordion-header button,
     background-size: 17.33px;
 }
 
+.faint-logo-line {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    height: 4px;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
+    transform: translateY(-50%); /* Vertically centers the line */
+    z-index: -1; /* Ensures the line is behind the logo */
+}
+
+.shadowed-logo {
+    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 1));
+}
+
 /* ======================================
  *  08. Newsletter
 /* ====================================== */
@@ -877,6 +907,10 @@ h2.accordion-header button,
     text-align: center;
     padding: 96px 0;
     border: 1px solid #34294b;
+
+    @media (max-width: 768px) {
+        padding: 45px 0;
+    }
 }
 
 .ready-section .title-2 {
@@ -1493,7 +1527,6 @@ main {
     padding: 18px 0;
     transition: background-color 0.5s;
     min-width: 370px;
-    overflow-x: hidden;
 
     &.is_scrolling {
         outline: rgb(11, 11, 11) solid 2px;
@@ -1530,6 +1563,13 @@ main {
 
             code {
                 font-size: 14px;
+            }
+        }
+
+        @media (max-width: 576px) {
+            #main-logo {
+                width: 36px;
+                margin-right: 6px !important;
             }
         }
     }
@@ -1610,6 +1650,13 @@ main {
     .rpg-avatar {
         width: 100%;
         padding: 20px 0;
+    }
+
+    @media (max-width: 576px) {
+
+        .copy-right {
+            font-size: 10px;
+        }
     }
 }
 
@@ -1901,9 +1948,7 @@ main {
 #generate-image {
     margin-bottom: 60px;
 
-    @media (max-width: 991px) {
-        margin-top: 25px;
-    }
+    margin-top: 25px;
 }
 
 .loader-wrapper {
@@ -1921,7 +1966,7 @@ main {
         padding: 40px;
 
         .btn {
-            padding: 9px 14px !important;
+            padding: 4px 11px !important;
         }
     }
 }
